# dinov3

./: AGENTS.md  pyproject.toml
dinov3/eval/: AGENTS.md
dinov3/eval/depth/: AGENTS.md
dinov3/eval/detection/: AGENTS.md
dinov3/eval/segmentation/: AGENTS.md
dinov3/eval/text/: AGENTS.md
dinov3/layers/: AGENTS.md
report/: 2026-03-05_dinov2_env_setup_and_feature_extraction.md
report/coop/: 2026-03-05_dinov2_env_setup_and_feature_extraction.md
scripts/: extract_image_features.py  extract_video_features.py
