[project]
name = "dinov3"
version = "0.0.1"
description = "DINOv3: Self-supervised vision foundation model"
requires-python = ">=3.11"
dependencies = [
    # Core DINOv3 dependencies (from requirements.txt)
    "ftfy",
    "omegaconf",
    "regex",
    "scikit-learn",
    "submitit",
    "termcolor",
    "torch>=2.7",
    "torchmetrics",
    "torchvision",
    # Additional for feature extraction scripts
    "opencv-python-headless",
    "requests",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "docstr-coverage==2.3.2",
    "mypy[reports]==1.17",
    "pylint==3.3.8",
    "ruff==0.12.8",
]
hub = [
    "transformers>=4.56",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchmetrics = { index = "pytorch-cu128" }

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = "dinov3"
exclude = '''(?x)(
  ^dinov3/tests/([^/]+/)*test_.*\.py$  # Unit tests
)'''

[tool.pylint.master]
persistent = false
score = false

[tool.pylint.messages_control]
disable = "all"
enable = [
  "miscellaneous",
  "similarities",
]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.reports]
reports = false

[tool.pylint.miscellaneous]
notes = [
  "FIXME",
  "XXX",
  "TODO",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"hubconf.py" = ["F401"]
